syntax = "proto3";

package video_service;

service VideoService {
    rpc CreateVideo(CreateVideoRequest) returns (Video);
    rpc UpdateVideoStatus(UpdateVideoStatusRequest) returns (Video);
    rpc FindVideoById(FindVideoByIdRequest) returns (Video);
    rpc GetAllVideo(GetAllVideoRequest) returns (GetAllVideoResponse);
    rpc GetAllChannelVideo(GetAllChannelVideoRequest) returns (GetAllChannelVideoResponse);
    rpc CreateComment(CreateCommentRequest) returns (Comment);
    rpc LikeVideo(LikeVideoRequest) returns (Like);
    rpc WatchVideo(WatchVideoRequest) returns (View);
    rpc CreatePlaylist(CreatePlaylistRequest) returns (Playlist);
    rpc AddVideoToPlaylist(AddVideoToPlaylistRequest) returns (Boolean);
    rpc FindPlaylistById(FindPlaylistByIdRequest) returns (Playlist);
}

message Video {
    string id = 1;
    string title = 2;
    string description = 3;
    string channel_id = 4;
    string status = 5;
    string preview_url = 6;
    string video_url = 7;
    string createdAt = 8;
    string updatedAt = 9;
    repeated Comment comments = 10;
    repeated View views = 11;
    repeated Like likes = 12;
}

message Comment {
    string id = 1;
    string text = 2;
    string video_id = 3;
    string channel_id = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Like {
    string id = 1;
    string video_id = 3;
    string channel_id = 4;
    string reaction_type = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message View {
    string id = 1;
    string video_id = 3;
    string channel_id = 4;
    string createdAt = 6;
    string updatedAt = 7;
}

message PlaylistVideo {
    string id = 1;
    string playlist_id = 2;
    string video_id = 3;
    string position = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Playlist {
    string id = 1;
    string text = 3;
    string channel_id = 4;
    string createdAt = 6;
    string updatedAt = 7;
    repeated PlaylistVideo videos = 8;
}

message Boolean {
    bool bool = 1;
}

message CreateVideoRequest {
    string title = 1;
    string description = 2;
    string channel_id = 3;
    string status = 4;
    string preview_url = 5;
    string video_url = 6;
    string createdAt = 7;
    string updatedAt = 8;
}

message GetAllVideoRequest {
    int32 take = 1;
    int32 skip = 2;
}

message GetAllVideoResponse {
    repeated Video videos = 1;
}

message GetAllChannelVideoRequest {
    string channel_id = 1;
    int32 take = 2;
    int32 skip = 3;
}

message GetAllChannelVideoResponse {
    repeated Video videos = 1;
}

message UpdateVideoStatusRequest {
    string video_id = 1;
    string channel_id = 2;
    string status = 3;
}

message CreateCommentRequest {
    string text = 1;
    string video_id = 2;
    string channel_id = 3;
}

message LikeVideoRequest {
    string video_id = 1;
    string channel_id = 2;
    string reaction = 3;
}

message WatchVideoRequest {
    string video_id = 1;
    string channel_id = 2;
}

message CreatePlaylistRequest {
    string text = 1;
    string channel_id = 2;
}

message AddVideoToPlaylistRequest {
    string playlist_id = 1;
    string video_id = 2;
    string position = 3;
}

message FindVideoByIdRequest {
    string video_id = 1;
}

message FindPlaylistByIdRequest {
    string id = 1;
}